# Reversi

./: .clang-tidy  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yaml  lint.yaml
include/othello/: board.hpp  disk.hpp  othello.hpp  player.hpp
include/reversi/: board.hpp  disk.hpp  player.hpp  reversi.hpp  utils.hpp
include/wrappers/: imgui.hpp  sdl_gl.hpp  wrappers.hpp
scripts/: build.sh  format.sh  test.sh
src/: othello_app.cpp  reversi.cpp  reversi_app.cpp  sdl.cpp
src/othello/: board.cpp  disk.cpp  othello.cpp  player.cpp
src/reversi/: board.cpp  disk.cpp  reversi.cpp
src/wrappers/: imgui.cpp  sdl_gl.cpp  wrappers.cpp
test/: CMakeLists.txt  test_board.cpp  test_othello.cpp  test_wrappers.cpp
